--- a/index.html
+++ b/index.html
@@ -457,6 +457,9 @@
             </div>
         </aside>
 
+        <!-- Sidebar Overlay (para móvil) -->
+        <div id="sidebarOverlay" class="sidebar-overlay" onclick="closeSidebar()"></div>
+
         <!-- Main Content -->
         <main class="main-content">
             <!-- Top Bar -->
