Fix: Solución simple móvil

--- a/index.html
+++ b/index.html
@@ -478,6 +478,9 @@
             </div>
         </aside>
 
+        <!-- Sidebar Overlay (para cerrar sidebar en móvil) -->
+        <div id="sidebarOverlay" class="sidebar-overlay" onclick="closeSidebar()"></div>
+
         <!-- Main Content -->
         <main class="main-content">
             <!-- Top Bar -->
